--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +66,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+body {
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
